<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>elmo_ethercat_sdk</name>
  <version>0.0.0</version>
  <description>Elmo Ethercat implementation.</description>
  <maintainer email="aircraftdesigner66@gmail.com">Yang Zhang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>message_logger</depend>
  <depend>soem_interface</depend>
  <depend>yaml-cpp</depend>
  <depend>ethercat_sdk_master</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
