<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soem_interface</name>
  <version>0.0.0</version>
  <description>C++ library to create multiple ethercat devices on one or multiple buses. Contains abstract base classes for the communication interface.</description>
  <maintainer email="aircraftdesigner66@gmail.com">Yang Zhang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>message_logger</depend>
  <depend>soem</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
