<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>soem_interface_example</name>
  <version>0.0.0</version>
  <description>Examples on how to use the soem_interface package.</description>
  <maintainer email="aircraftdesigner66@gmail.com">Yang Zhang</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>message_logger</depend>
  <depend>soem</depend>
  <depend>soem_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
